kubernetes/spa-api-gw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spa-api-gw
  name: spa-api-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-api-gw
  template:
    metadata:
      labels:
        app: spa-api-gw
    spec:
      containers:
      - image: ghcr.io/michaelvl/oidc-bff-apigw-workshop@sha256:26320a9c6f378128ab97a8583bd80f0c415fbf32741c6339953eeb17b98c12c2
        name: client
        command: ["node", "src/index.js"]
        workingDir: /apps/api-gw
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spa-api-gw
  name: spa-api-gw
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5020
  selector:
    app: spa-api-gw
  type: ClusterIP
