kubernetes/spa-cdn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spa-cdn
  name: spa-cdn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-cdn
  template:
    metadata:
      labels:
        app: spa-cdn
    spec:
      containers:
      - image: ghcr.io/michaelvl/oidc-bff-apigw-workshop@sha256:26320a9c6f378128ab97a8583bd80f0c415fbf32741c6339953eeb17b98c12c2
        imagePullPolicy: IfNotPresent
        name: cdn
        command: ["node", "src/index.js"]
        workingDir: /apps/cdn
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spa-cdn
  name: spa-cdn
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: spa-cdn
  type: ClusterIP
