kubernetes/spa-login-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spa-login-bff
  name: spa-login-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-login-bff
  template:
    metadata:
      labels:
        app: spa-login-bff
    spec:
      containers:
      - image: ghcr.io/michaelvl/oidc-oauth2-bff:latest
        imagePullPolicy: IfNotPresent
        name: client
        command: ["node", "dist/index.js"]
        workingDir: /apps/bff
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spa-login-bff
  name: spa-login-bff
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5010
  selector:
    app: spa-login-bff
  type: ClusterIP
