kubernetes/spa-redis-session-store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: session-store
  name: session-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-store
  template:
    metadata:
      labels:
        app: session-store
    spec:
      containers:
      - image: redis:6.2.4-alpine
        name: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: session-store
  name: session-store
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: session-store
  type: ClusterIP
