kubernetes/gateway-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: spa
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTP
    port: 80
    name: sdn-gw
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spa-cdn
spec:
  parentRefs:
  - name: spa
  rules:
  - backendRefs:
    - name: spa-cdn
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spa-login-bff
spec:
  parentRefs:
  - name: spa
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /login
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: spa-login-bff
      port: 80
